# THOR-memory-bible-for-AI

./: .gitignore  .thor  AGENTS.md  AI-BOOST-ROADMAP.md  BENCHMARKS.md  CONTRIBUTING.md  FEATURES.md  OPTIONAL-FEATURES.md  README.md  RELEASING.md  SETUP.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/: AI-BOOST-ROADMAP.md  BENCHMARKS.md  OPTIONAL-FEATURES.md  REFERENCE.md  RELEASING.md  SETUP.md  SIMILAR-PROJECTS.md
thor/: .gitignore  Cargo.toml  guard-response-rulebook.example.json  guard-rulebook.example.json
thor/deploy/: Dockerfile  SYNC-DEPLOY.md  deploy-watcher.sh  docker-compose.yml
thor/eval/: drift_noise_baseline.json  drift_scenarios.jsonl
thor/examples/: cache_correctness.rs  cache_speed.rs  drift_eval.rs  hits_dump.rs  prov_latency.rs  recall_eval.rs  warm_ab.rs
thor/experiments/ab-2026-07-14/: README.md  sandbox-tracked.patch
thor/experiments/ab-2026-07-14/new/: run-ab.sh  thor_examples_resident_bench.rs  thor_src_experiments.rs
thor/src/: auditor.rs  backup.rs  cas.rs  cli.rs  consolidate.rs  courier.rs  daemon_client.rs  doctor.rs  embed.rs  embed_daemon.rs  event_store.rs  footer.rs  guard.rs  importer.rs  inbox.rs  ingest.rs  install.rs  ledger.rs  lib.rs  main.rs  mcp.rs  recall.rs  repo.rs  rerank.rs  review.rs  strength.rs  structure.rs  symbols.rs  sync.rs  vectors.rs  vocab.rs
thor/tools/: export_mimir.py  gen_benchmark_chart.py  ingest_repo.py  run_sidebyside.ps1
